--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,12 @@
 set(header_path "${${PROJECT_NAME}_SOURCE_DIR}/include")
 set(header ${header_path}/circle.h)
 set(src circle.cpp)
+set(tasks_src "${${PROJECT_NAME}_SOURCE_DIR}/src/tasks.cpp")
 
 add_library(${PROJECT_NAME} SHARED
   ${header}
-  ${src})
+  ${src}
+  ${tasks_src})
   
 target_include_directories(${PROJECT_NAME}
   PUBLIC ${CMAKE_CURRENT_BINARY_DIR}
@@ -19,6 +21,11 @@ target_include_directories(${PROJECT_NAME}.info
 target_link_libraries(${PROJECT_NAME}.info
   ${PROJECT_NAME})
 
+add_executable(${PROJECT_NAME}.test test/AllTests.cpp test/tests.cpp)
+target_include_directories(${PROJECT_NAME}.test
+  PUBLIC ${CMAKE_CURRENT_BINARY_DIR}
+         ${header_path}
+)
 
 install(TARGETS ${PROJECT_NAME}
         LIBRARY DESTINATION "${lib_dest}"
